# Launcher

./: .gitignore  LICENSE  README.md  bun.lockb  index.html  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: main.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  main.rs
src/app/: main.tsx  reducers.ts  store.ts
src/app/layouts/: BaseLayout.tsx
src/entities/install/lib/: installMronLatest.ts
src/entities/main/model/: launcherSlice.ts  storage.ts
src/features/install/: index.ts
src/features/install/ui/: Install.tsx
src/features/name/: index.ts
src/features/name/ui/: Name.tsx
src/features/play/: index.ts
src/features/play/ui/: Play.tsx
src/features/settings/ui/: Settings.tsx
src/features/update/: index.ts
src/features/update/ui/: Update.tsx
src/pages/main/ui/: Page.tsx  globals.css
src/pages/main/ui/HandleLauncher/: HandleLauncher.tsx
src/pages/settings/ui/: Page.tsx
src/shared/hooks/: use-toast.ts
src/shared/ui/: button.tsx  form.tsx  label.tsx  toast.tsx  toaster.tsx
src/shared/utils/: latestVersion.ts  removeOldInstall.ts  storeHelper.ts  updater.ts
src/widgets/header/ui/Header/: Header.tsx
